[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "ehsm"
version = "0.0.1"
authors = [
    { name="Chung, Tsz Lung", email="tsz.lung.chung@intel.com" },
    { name="Wang, Ruiqi", email="ruiqi.wang@intel.com" },
]
description = "A python SDK for eHSM KMS API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "pytest>=7.4.3",
    "pydantic>=2.4.2",
    "httpx>=0.25.1",
    "click>=8.1.7",
]

[project.urls]
homepage = "https://github.com/intel/ehsm"
repository = "https://github.com/intel/ehsm"

[project.scripts]
ehsm = "ehsm.__main__:ehsm_cli"
