[package]
name = "ehsm_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.68"
reqwest = { version = "0.12.4", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.13"
url = "2.2"
hmac = "0.9"
sha2 = "0.9.5"
openssl = "0.10.62"
sm3 = "0.4.0"
ring = "0.17.7"

[lib]
path = "src/lib.rs"

